tests/ui-fulldeps/session-diagnostic/subdiagnostic-derive.stderr
error: label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:47:1
   |
LL | / #[label(parse_add_paren)]
LL | |
LL | | struct C {
LL | |     var: String,
LL | | }
   | |_^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:54:1
   |
LL | #[label]
   | ^^^^^^^^

error: `#[foo]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:63:1
   |
LL | #[foo]
   | ^^^^^^

error: `#[label = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:73:1
   |
LL | #[label = "..."]
   | ^^^^^^^^^^^^^^^^

error: `#[label(bug = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:82:9
   |
LL | #[label(bug = "...")]
   |         ^^^^^^^^^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:82:1
   |
LL | #[label(bug = "...")]
   | ^^^^^^^^^^^^^^^^^^^^^

error: `#[label("...")]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:92:9
   |
LL | #[label("...")]
   |         ^^^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:92:1
   |
LL | #[label("...")]
   | ^^^^^^^^^^^^^^^

error: `#[label(slug = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:102:9
   |
LL | #[label(slug = 4)]
   |         ^^^^^^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:102:1
   |
LL | #[label(slug = 4)]
   | ^^^^^^^^^^^^^^^^^^

error: `#[label(slug(...))]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:112:9
   |
LL | #[label(slug("..."))]
   |         ^^^^^^^^^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:112:1
   |
LL | #[label(slug("..."))]
   | ^^^^^^^^^^^^^^^^^^^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:132:1
   |
LL | #[label()]
   | ^^^^^^^^^^

error: `#[label(code = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:141:26
   |
LL | #[label(parse_add_paren, code = "...")]
   |                          ^^^^^^^^^^^^

error: `#[label(applicability = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:150:26
   |
LL | #[label(parse_add_paren, applicability = "machine-applicable")]
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive.rs:159:1
   |
LL | #[foo]
   | ^^^^^^

error: `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:173:5
   |
LL |     #[bar]
   |     ^^^^^^

error: `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:185:5
   |
LL |     #[bar = "..."]
   |     ^^^^^^^^^^^^^^

error: `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:197:5
   |
LL |     #[bar = 4]
   |     ^^^^^^^^^^

error: `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:209:5
   |
LL |     #[bar("...")]
   |     ^^^^^^^^^^^^^

error: `#[label(code = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:221:13
   |
LL |     #[label(code = "...")]
   |             ^^^^^^^^^^^^

error: diagnostic slug must be first argument of a `#[label(...)]` attribute
  --> $DIR/subdiagnostic-derive.rs:221:5
   |
LL |     #[label(code = "...")]
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: the `#[primary_span]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:250:5
   |
LL |     #[primary_span]
   |     ^^^^^^^^^^^^^^^

error: label without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:247:1
   |
LL | / #[label(parse_add_paren)]
LL | |
LL | | struct W {
LL | |     #[primary_span]
LL | |
LL | |     span: String,
LL | | }
   | |_^

error: `#[applicability]` is only valid on suggestions
  --> $DIR/subdiagnostic-derive.rs:260:5
   |
LL |     #[applicability]
   |     ^^^^^^^^^^^^^^^^

error: `#[bar]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:270:5
   |
LL |     #[bar]
   |     ^^^^^^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: `#[bar = ...]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:281:5
   |
LL |     #[bar = "..."]
   |     ^^^^^^^^^^^^^^

error: `#[bar(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:292:5
   |
LL |     #[bar("...")]
   |     ^^^^^^^^^^^^^
   |
   = help: only `primary_span`, `applicability` and `skip_arg` are valid field attributes

error: unexpected unsupported untagged union
  --> $DIR/subdiagnostic-derive.rs:308:1
   |
LL | / union AC {
LL | |
LL | |     span: u32,
LL | |     b: u64,
LL | | }
   | |_^

error: `#[label(parse_add_paren)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:323:26
   |
LL | #[label(parse_add_paren, parse_add_paren)]
   |                          ^^^^^^^^^^^^^^^
   |
   = help: a diagnostic slug must be the first argument to the attribute

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:336:5
   |
LL |     #[primary_span]
   |     ^^^^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:333:5
   |
LL |     #[primary_span]
   |     ^^^^^^^^^^^^^^^

error: subdiagnostic kind not specified
  --> $DIR/subdiagnostic-derive.rs:342:8
   |
LL | struct AG {
   |        ^^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:379:45
   |
LL | #[suggestion(parse_add_paren, code = "...", code = "...")]
   |                                             ^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:379:31
   |
LL | #[suggestion(parse_add_paren, code = "...", code = "...")]
   |                               ^^^^^^^^^^^^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:397:5
   |
LL |     #[applicability]
   |     ^^^^^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:394:5
   |
LL |     #[applicability]
   |     ^^^^^^^^^^^^^^^^

error: the `#[applicability]` attribute can only be applied to fields of type `Applicability`
  --> $DIR/subdiagnostic-derive.rs:407:5
   |
LL |     #[applicability]
   |     ^^^^^^^^^^^^^^^^

error: suggestion without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:420:1
   |
LL | #[suggestion(parse_add_paren)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: invalid applicability
  --> $DIR/subdiagnostic-derive.rs:430:45
   |
LL | #[suggestion(parse_add_paren, code = "...", applicability = "foo")]
   |                                             ^^^^^^^^^^^^^^^^^^^^^

error: suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:448:1
   |
LL | / #[suggestion(parse_add_paren, code = "...")]
LL | |
LL | | struct AR {
LL | |     var: String,
LL | | }
   | |_^

error: unsupported type attribute for subdiagnostic enum
  --> $DIR/subdiagnostic-derive.rs:462:1
   |
LL | #[label]
   | ^^^^^^^^

error: `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive.rs:482:38
   |
LL | #[suggestion(parse_add_paren, code = "{var}", applicability = "machine-applicable")]
   |                                      ^^^^^^^

error: `var` doesn't refer to a field on this type
  --> $DIR/subdiagnostic-derive.rs:501:42
   |
LL |     #[suggestion(parse_add_paren, code = "{var}", applicability = "machine-applicable")]
   |                                          ^^^^^^^

error: `#[suggestion_part]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:524:5
   |
LL |     #[suggestion_part]
   |     ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions, use `#[primary_span]` instead

error: `#[suggestion_part(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:527:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[suggestion_part(...)]` is only valid in multipart suggestions

error: suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:521:1
   |
LL | / #[suggestion(parse_add_paren, code = "...")]
LL | |
LL | | struct BA {
LL | |     #[suggestion_part]
...  |
LL | |     var: String,
LL | | }
   | |_^

error: `#[multipart_suggestion(code = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:536:41
   |
LL | #[multipart_suggestion(parse_add_paren, code = "...", applicability = "machine-applicable")]
   |                                         ^^^^^^^^^^^^
   |
   = help: only `style` and `applicability` are valid nested attributes

error: multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive.rs:536:1
   |
LL | / #[multipart_suggestion(parse_add_paren, code = "...", applicability = "machine-applicable")]
LL | |
LL | |
LL | | struct BBa {
LL | |     var: String,
LL | | }
   | |_^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:546:5
   |
LL |     #[suggestion_part]
   |     ^^^^^^^^^^^^^^^^^^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:554:5
   |
LL |     #[suggestion_part()]
   |     ^^^^^^^^^^^^^^^^^^^^

error: `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:563:5
   |
LL |     #[primary_span]
   |     ^^^^^^^^^^^^^^^
   |
   = help: multipart suggestions use one or more `#[suggestion_part]`s rather than one `#[primary_span]`

error: multipart suggestion without any `#[suggestion_part(...)]` fields
  --> $DIR/subdiagnostic-derive.rs:560:1
   |
LL | / #[multipart_suggestion(parse_add_paren)]
LL | |
LL | | struct BC {
LL | |     #[primary_span]
LL | |
LL | |     span: Span,
LL | | }
   | |_^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:571:5
   |
LL |     #[suggestion_part]
   |     ^^^^^^^^^^^^^^^^^^

error: `#[suggestion_part(...)]` attribute without `code = "..."`
  --> $DIR/subdiagnostic-derive.rs:574:5
   |
LL |     #[suggestion_part()]
   |     ^^^^^^^^^^^^^^^^^^^^

error: `#[suggestion_part(foo = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:577:23
   |
LL |     #[suggestion_part(foo = "bar")]
   |                       ^^^^^^^^^^^
   |
   = help: `code` is the only valid nested attribute

error: the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:580:5
   |
LL |     #[suggestion_part(code = "...")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: the `#[suggestion_part(...)]` attribute can only be applied to fields of type `Span` or `MultiSpan`
  --> $DIR/subdiagnostic-derive.rs:583:5
   |
LL |     #[suggestion_part()]
   |     ^^^^^^^^^^^^^^^^^^^^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:591:37
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                                     ^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:591:23
   |
LL |     #[suggestion_part(code = "...", code = ",,,")]
   |                       ^^^^^^^^^^^^

error: `#[applicability]` has no effect if all `#[suggestion]`/`#[multipart_suggestion]` attributes have a static `applicability = "..."`
  --> $DIR/subdiagnostic-derive.rs:620:5
   |
LL |     #[applicability]
   |     ^^^^^^^^^^^^^^^^

error: expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:668:23
   |
LL |     #[suggestion_part(code("foo"))]
   |                       ^^^^^^^^^^^

error: expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:677:23
   |
LL |     #[suggestion_part(code("foo", "bar"))]
   |                       ^^^^^^^^^^^^^^^^^^

error: expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:686:23
   |
LL |     #[suggestion_part(code(3))]
   |                       ^^^^^^^

error: expected exactly one string literal for `code = ...`
  --> $DIR/subdiagnostic-derive.rs:695:23
   |
LL |     #[suggestion_part(code())]
   |                       ^^^^^^

error: `code = "..."`/`code(...)` must contain only string literals
  --> $DIR/subdiagnostic-derive.rs:704:23
   |
LL |     #[suggestion_part(code = 3)]
   |                       ^^^^^^^^

error: specified multiple times
  --> $DIR/subdiagnostic-derive.rs:746:60
   |
LL | #[suggestion(parse_add_paren, code = "", style = "hidden", style = "normal")]
   |                                                            ^^^^^^^^^^^^^^^^
   |
note: previously specified here
  --> $DIR/subdiagnostic-derive.rs:746:42
   |
LL | #[suggestion(parse_add_paren, code = "", style = "hidden", style = "normal")]
   |                                          ^^^^^^^^^^^^^^^^

error: `#[suggestion_hidden(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:755:1
   |
LL | #[suggestion_hidden(parse_add_paren, code = "")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: Use `#[suggestion(..., style = "hidden")]` instead

error: `#[suggestion_hidden(...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:763:1
   |
LL | #[suggestion_hidden(parse_add_paren, code = "", style = "normal")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: Use `#[suggestion(..., style = "hidden")]` instead

error: invalid suggestion style
  --> $DIR/subdiagnostic-derive.rs:771:50
   |
LL | #[suggestion(parse_add_paren, code = "", style = "foo")]
   |                                                  ^^^^^
   |
   = help: valid styles are `normal`, `short`, `hidden`, `verbose` and `tool-only`

error: `#[suggestion(style = ...)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:779:42
   |
LL | #[suggestion(parse_add_paren, code = "", style = 42)]
   |                                          ^^^^^^^^^^

error: `#[suggestion(style)]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:787:42
   |
LL | #[suggestion(parse_add_paren, code = "", style)]
   |                                          ^^^^^
   |
   = help: a diagnostic slug must be the first argument to the attribute

error: `#[suggestion(style(...))]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:795:42
   |
LL | #[suggestion(parse_add_paren, code = "", style("foo"))]
   |                                          ^^^^^^^^^^^^

error: `#[primary_span]` is not a valid attribute
  --> $DIR/subdiagnostic-derive.rs:806:5
   |
LL |     #[primary_span]
   |     ^^^^^^^^^^^^^^^
   |
   = note: there must be exactly one primary span
   = help: to create a suggestion with multiple spans, use `#[multipart_suggestion]` instead

error: suggestion without `#[primary_span]` field
  --> $DIR/subdiagnostic-derive.rs:803:1
   |
LL | / #[suggestion(parse_add_paren, code = "")]
LL | |
LL | | struct PrimarySpanOnVec {
LL | |     #[primary_span]
...  |
LL | |     sub: Vec<Span>,
LL | | }
   | |_^

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive.rs:63:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute `foo` in this scope
  --> $DIR/subdiagnostic-derive.rs:159:3
   |
LL | #[foo]
   |   ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:173:7
   |
LL |     #[bar]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:185:7
   |
LL |     #[bar = "..."]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:197:7
   |
LL |     #[bar = 4]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:209:7
   |
LL |     #[bar("...")]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:270:7
   |
LL |     #[bar]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:281:7
   |
LL |     #[bar = "..."]
   |       ^^^

error: cannot find attribute `bar` in this scope
  --> $DIR/subdiagnostic-derive.rs:292:7
   |
LL |     #[bar("...")]
   |       ^^^

error[E0425]: cannot find value `slug` in module `rustc_errors::fluent`
  --> $DIR/subdiagnostic-derive.rs:122:9
   |
LL | #[label(slug)]
   |         ^^^^ not found in `rustc_errors::fluent`

error: aborting due to 81 previous errors

For more information about this error, try `rustc --explain E0425`.
